fixeddouble scrollbar in responsive https://discord.com/channels/921077492427685970/921171300892962876/1210888948692418611

--- a/styles/theme/nova/formate.css
+++ b/styles/theme/nova/formate.css
@@ -440,7 +440,7 @@ th a, .res_current {
 
 .infos {
   text-align: center;
-  background: #2a2e31;
+  background: #212121;
   border-radius: 15px;
   margin-top: 10px;
   overflow: auto;
@@ -584,7 +584,7 @@ th a, .res_current {
   padding: 10px;
   text-align: center;
   background: #212121;
-  height: 140px
+  height: auto
 }
 
 .buildn {
